Fixed filtres transition mobile > thin mobile

--- a/css/style.css
+++ b/css/style.css
@@ -645,6 +645,6 @@ a {
 /* Fix transition tablette > mobile sur Chrome */
 @media (max-width: 803px) {
     .filtre-button {
-        flex: 1 1 calc(50% - 7.5px);
+        flex: 1 1 48%;
     }
 }
